--- a/0_cover/acknowledgements.tex
+++ b/0_cover/acknowledgements.tex
@@ -3,7 +3,7 @@
 \vspace*{\stretch{2}}
 
 \begin{flushright}
-\textit{À minha mãe e minha esposa.}\hspace{1cm}
+\textit{À minha família e minha noiva.}\hspace{1cm}
 \end{flushright}
 
 \vspace*{\stretch{1}}
