--- a/references/references.bib
+++ b/references/references.bib
@@ -1049,3 +1049,39 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   year={2013},
   organization={IEEE}
 }
+@book{katok1995introduction,
+  title={Introduction to the modern theory of dynamical systems},
+  author={Katok, Anatole and Hasselblatt, Boris},
+  volume={54},
+  year={1995},
+  publisher={Cambridge university press}
+}
+@article{rose1982linear,
+  title={Linear algebra and its applications (gilbert strang)},
+  author={Rose, Nicholas J},
+  journal={SIAM Review},
+  volume={24},
+  number={4},
+  pages={499--501},
+  year={1982},
+  publisher={SIAM}
+}
+@book{weyl2015symmetry,
+  title={Symmetry},
+  author={Weyl, Hermann},
+  volume={47},
+  year={2015},
+  publisher={Princeton University Press}
+}
+@book{coxeter1998non,
+  title={Non-euclidean geometry},
+  author={Coxeter, Harold Scott Macdonald},
+  year={1998},
+  publisher={Cambridge University Press}
+}
+@article{smith1997scientist,
+  title={The scientist and engineer's guide to digital signal processing},
+  author={Smith, Steven W and others},
+  year={1997},
+  publisher={California Technical Pub. San Diego}
+}
