--- a/2_background/background.tex
+++ b/2_background/background.tex
@@ -52,29 +52,283 @@ Cada fórmula da lógica é verdadeira ou falsa em um determinado estado; sua verda
 
 \subsubsection{Contenção de Linguagem}\label{subsec:lc}
 
-Existem propriedades de interesse prático que não podem ser descritas no CTL. Um exemplo é a propriedade ``quase sempre'': uma condição, $\textbf{q}$, sempre se mantém após um número finito de transições (note que as fórmulas $\textbf{FG}$ $\textbf{q}$ e $\textbf{AFG}$ $\textbf{q}$ expressariam isso, mas estas não são fórmulas legais de CTL). Esta propriedade se parece muito com $\textbf{AF}$ $\textbf{AG}$ $\textbf{q}$, mas não é o mesmo. Pode-se exibir um sistema de transição onde $\textbf{AF}$ $\textbf{G}$ $\textbf{q}$ é verdadeiro, enquanto $\textbf{AF}$ $\textbf{AG}$ $\textbf{q}$ é falso.
+Existem propriedades de interesse prático que não podem ser descritas no CTL. Um exemplo é a propriedade ``quase sempre'': uma condição, ${\displaystyle \mathbf{q}}$, sempre se mantém após um número finito de transições (note que as fórmulas ${\displaystyle \mathbf{F}}{\displaystyle \mathbf{G}}$ ${\displaystyle \mathbf{q}}$ e ${\displaystyle \mathbf{A}}{\displaystyle \mathbf{F}}{\displaystyle \mathbf{G}}$ ${\displaystyle \mathbf{q}}$ expressariam isso, mas estas não são fórmulas legais de CTL). Esta propriedade se parece muito com ${\displaystyle \mathbf{A}}{\displaystyle \mathbf{F}}$ ${\displaystyle \mathbf{A}}{\displaystyle \mathbf{G}}$ ${\displaystyle \mathbf{q}}$, mas não é o mesmo. Pode-se exibir um sistema de transição onde ${\displaystyle \mathbf{A}}{\displaystyle \mathbf{F}}$ ${\displaystyle \mathbf{G}}$ ${\displaystyle \mathbf{q}}$ é verdadeiro, enquanto ${\displaystyle \mathbf{A}}{\displaystyle \mathbf{F}}$ ${\displaystyle \mathbf{A}}{\displaystyle \mathbf{G}}$ ${\displaystyle \mathbf{q}}$ é falso.
  
 Uma solução seria usar um tipo mais expressivo de lógica temporal (por exemplo, a propriedade anterior poderia ser expressa em Propositional Linear Temporal Logic (PLTL) ou CTL). Porém haveria desvantagens, como a maior complexidade de algoritmos para verificação de modelos. Uma alternativa é usar outro paradigma de verificação, chamado contenção de linguagem, baseado na teoria dos $\omega$-autômatos. Por exemplo, é fácil expressar a propriedade ``quase sempre'' anterior usando um autômato.
 
-Para alcançar a verificação de contenção de linguagem, representamos a composição do sistema dado com um modelo que representa a negação da propriedade e verificamos o vazio da linguagem. A linguagem do sistema composto está vazia se e somente se o sistema satisfizer a propriedade $\textbf{T}$.
+Para alcançar a verificação de contenção de linguagem, representamos a composição do sistema dado com um modelo que representa a negação da propriedade e verificamos o vazio da linguagem. A linguagem do sistema composto está vazia se e somente se o sistema satisfizer a propriedade ${\displaystyle \mathbf{T}}$.
  
-O vazio de linguagem é usado não apenas para verificar as propriedades que não podem ser expressas em \textit{Fair} CTL, mas também para verificar se a abstração de um sistema ainda contém o sistema original. Em ambos os casos, é preciso complementar um $\omega$-autômato ($\textbf{T}$), e isso é difícil de fazer se o autômato não for determinístico (como é geralmente o caso de uma abstração). O fato de que a complementação de uma propriedade determinista é fácil, enquanto a complementação de uma propriedade não-determinística pode ser difícil, é um problema-chave com a contenção da linguagem. Isto levou a muita pesquisa em diferentes classes de $\omega$-autômatos com diferentes expressividade e dificuldade de complementação.
+O vazio de linguagem é usado não apenas para verificar as propriedades que não podem ser expressas em \textit{Fair} CTL, mas também para verificar se a abstração de um sistema ainda contém o sistema original. Em ambos os casos, é preciso complementar um $\omega$-autômato (${\displaystyle \mathbf{T}}$), e isso é difícil de fazer se o autômato não for determinístico (como é geralmente o caso de uma abstração). O fato de que a complementação de uma propriedade determinista é fácil, enquanto a complementação de uma propriedade não-determinística pode ser difícil, é um problema-chave com a contenção da linguagem. Isto levou a muita pesquisa em diferentes classes de $\omega$-autômatos com diferentes expressividade e dificuldade de complementação.
 
 \section{Sistemas Dinâmicos Lineares}\label{sec:lds}
 
+Sistemas dinâmicos lineares são sistemas dinâmicos~\cite{katok1995introduction} cujas funções de avaliação são lineares. Embora os sistemas dinâmicos em geral não tenham soluções de forma fechada, os sistemas dinâmicos lineares podem ser resolvidos com exatidão e possuem um rico conjunto de propriedades matemáticas. Sistemas lineares também podem ser usados para entender o comportamento qualitativo de sistemas dinâmicos gerais, calculando os pontos de equilíbrio do sistema e aproximando-o como um sistema linear em torno de cada um desses pontos.
+
+Em um sistema dinâmico linear, a variação de um vetor de estado (um vetor ${\displaystyle N}$-dimensional dado por ${\displaystyle \mathbf{x}}$) é igual a uma matriz constante (dado por ${\displaystyle \mathbf{A}}$) multiplicada por ${\displaystyle \mathbf{x}}$. Essa variação pode ter duas formas: ou como um fluxo, no qual ${\displaystyle \mathbf{x}}$ varia continuamente com o tempo
+
+\begin{equation}
+\dot{{\displaystyle \mathbf{x}}}(t)={\displaystyle \mathbf{A}} \cdot {\displaystyle \mathbf{x}}(t)
+\end{equation}
+
+ou como um mapeamento, em que ${\displaystyle \mathbf{x}}$ varia em etapas discretas
+
+\begin{equation}\label{eq:dtsx}
+{\displaystyle \mathbf{x}}_{n+1}={\displaystyle \mathbf{A}} \cdot {\displaystyle \mathbf{x}}_n
+\end{equation}
+
+Estas equações são lineares no seguinte sentido: se ${\displaystyle \mathbf{x}(t)}$ e ${\displaystyle \mathbf{y}(t)}$ são duas soluções válidas, então também é qualquer combinação linear~\cite{rose1982linear} das duas soluções, por exemplo, ${\displaystyle \mathbf{z}(t) \ {\stackrel{\mathrm{def}} {=}} \ \alpha \mathbf{x}(t) + \beta \mathbf{y}(t)}$ onde ${\displaystyle \alpha}$ e ${\displaystyle \beta}$ são quaisquer dois escalares. A matriz ${\displaystyle \mathbf{A}}$ não precisa ser simétrica~\cite{weyl2015symmetry}.
+
+Sistemas dinâmicos lineares podem ser resolvidos exatamente, em contraste com a maioria dos não-lineares. Ocasionalmente, um sistema não linear pode ser resolvido exatamente por uma mudança de variáveis para um sistema linear. Além disso, as soluções de (quase) qualquer sistema não linear podem ser bem aproximadas por um sistema linear equivalente próximo de seus pontos fixos~\cite{coxeter1998non}. Assim, entender os sistemas lineares e suas soluções é um primeiro passo crucial para entender os sistemas não-lineares mais complexos.
+
 \subsection{Contínuos}\label{subsec:c}
+
+Um sistema é chamado de sistema de tempo contínuo se aceitar sinais de tempo contínuo como entrada e gerar sinais de tempo contínuo como saída. A entrada será indicada por itálico em minúsculo $\mathit{u}(t)$ para entrada única ou por negrito $\mathbf{u}(t)$ para múltiplas entradas. Se o sistema tem $p$ entradas, então $\mathbf{u}(t)$ é um vetor $p \times 1$ ou $\mathbf{u} = [\mathit{u}_\mathrm{1} ~ \mathit{u}_\mathrm{2} ~ \dots ~ \mathit{u}_p]^T$, onde $T$ denota a transposição. Da mesma forma, a saída será denotada por $\mathit{y}(t)$ ou $\mathbf{y}(t)$. Supõe-se que o tempo $t$ varie de $-\infty$ a $\infty$.
+
+\subsubsection{Equações de Espaço de Estados}\label{subsec:ssec}
+
+Todo sistema agregado linear invariante no tempo pode ser descrito por
+
+\begin{equation}\label{eq:ssec}
+\begin{cases}
+\dot{\mathbf{x}}(t)=\mathbf{A}\mathbf{x}(t)+\mathbf{B}\mathbf{u}(t)\\
+\mathbf{y}(t)=\mathbf{C}\mathbf{x}(t)+\mathbf{D}\mathbf{u}(t)
+\end{cases},
+\end{equation}
+
+\noindent Para um sistema com $p$ entradas, $q$ saídas e $n$ variáveis de estado, $A$, $B$, $C$ e $D$ são, respectivamente, $n \times n$, $n \times p$, $q \times n$ e $q \times p$ matrizes constantes. Aplicando a transformada de Laplace em~\ref{eq:ssec} e rearranjando, temos
+
+\begin{equation}\label{eq:sc}
+\hat{\mathbf{x}}(s)=~(s\mathbf{I}-\mathbf{A})^{-1}s\mathbf{x}(0)+(s\mathbf{I}-\mathbf{A})^{-1}\mathbf{B}\hat{\mathbf{u}}(s)
+\end{equation}
+
+\begin{equation}\label{eq:oc}
+\hat{\mathbf{y}}(s)=~\mathbf{C}(s\mathbf{I}-\mathbf{A})^{-1}s\mathbf{x}(0)+\mathbf{C}(s\mathbf{I}-\mathbf{A})^{-1}\mathbf{B}\hat{\mathbf{u}}(s)+\mathbf{D}\hat{\mathbf{u}}(s)
+\end{equation}
+
+\noindent São equações algébricas. Dados $\mathbf{x}(0)$ e $\hat{\mathbf{u}}(s)$, $\hat{\mathbf{x}}(s)$ e $\hat{\mathbf{y}}(s)$ podem ser calculados algebricamente a partir de (\ref{eq:sc}) e (\ref{eq:oc}). Suas transformadas inversas de Laplace produzem as respostas de tempo $\mathbf{x}(t)$ e $\mathbf{y}(t)$. As equações também revelam o fato de que a resposta de um sistema linear pode ser decomposta como a resposta de estado zero e a resposta de entrada zero.
 
 \subsection{Discretos}\label{subsec:d}
 
+A maioria dos conceitos em sistemas de tempo contínuo pode ser aplicada diretamente aos sistemas de tempo discreto.
+Um sistema é chamado de sistema de tempo discreto se aceitar sinais de tempo discreto como entrada e gerar sinais de tempo discreto como saída. Todos os sinais de tempo discreto em um sistema serão considerados como tendo o mesmo período de amostragem $T_\mathrm{s}$. A entrada e a saída serão denotadas por $u[k]:= u (kT)$ e $y[k]:= y(kT)$, onde $k$ denota o instante de tempo discreto e é um inteiro que varia de $-\infty$ a $\infty$. Eles se tornam negrito para múltiplas entradas e múltiplas saídas.
+
+Um sistema de tempo discreto é causal se a saída atual depende de entradas atuais e passadas. O estado no tempo $k_\mathrm{0}$, denotado por $\mathbf{x}[k0]$, é a informação no instante de tempo $k_\mathrm{0}$, que junto com $\mathbf{u}[k]$, $k \geq k_\mathrm{0}$, determina unicamente a saída $\mathbf{y}[k]$, $k \geq k0$. As entradas de $\mathbf{x}$ são chamadas de variáveis de estado. Se o número de variáveis de estado for finito, o sistema de tempo discreto é agrupado; caso contrário, é distribuído. Todo sistema de tempo contínuo envolvendo atraso de tempo é um sistema distribuído. Em um sistema de tempo discreto, se o atraso de tempo for um múltiplo inteiro do período de amostragem $T_\mathrm{s}$, então o sistema de tempo discreto é um sistema aglomerado.
+
+Um sistema de tempo discreto é linear se as propriedades de aditividade e homogeneidade se mantiverem. A resposta de cada sistema linear em tempo discreto pode ser decomposta como
+
+\begin{equation*}
+Resposta = resposta~ de ~estado~ zero~~ +~~ resposta ~de~ entrada~ zero
+\end{equation*}
+
+e as respostas de estado zero satisfazem a propriedade de superposição, e portanto as respostas de entrada zero também.
+
+\subsubsection{Equações de Espaço de Estados}\label{subsec:sse}
+
+Cada sistema de tempo discreto linear agregado e invariante no tempo pode ser descrito por
+
+\begin{equation}\label{eq:ssed}
+\begin{cases}
+\mathbf{x}(k+1)=\mathbf{A}\mathbf{x}(k)+\mathbf{B}\mathbf{u}(k)\\
+\mathbf{y}(k)=\mathbf{C}\mathbf{x}(k)+\mathbf{D}\mathbf{u}(k)\\
+\mathbf{u}(k)=\mathbf{r}(k)-\mathbf{K}\mathbf{x}(k)
+\end{cases},
+\end{equation}
+
+\noindent onde $\mathbf{A}$, $\mathbf{B}$, $\mathbf{C}$, $\mathbf{D}$ e $\mathbf{K}$ são matrizes contantes e $\mathbf{r}$ é a referência de entrada. Seja $\hat{\mathbf{x}}(z)$ a transformada ${\displaystyle Z}$  de $\mathbf{x}[k]$ ou
+
+\begin{equation*}
+\hat{\mathbf{x}}(z)=Z[\hat{\mathbf{x}}(k)]:=\sum_{k=0}^{\infty} \mathbf{x}(k)z^{-k}
+\end{equation*}
+
+\noindent Temos que
+
+\begin{equation*}
+\begin{aligned}
+Z[\hat{\mathbf{x}}(k+1)]=&~\sum_{k=0}^{\infty} \mathbf{x}(k+1)z^{-k} \\
+                        =&~z\left[\sum_{l=1}^{\infty} \mathbf{x}(l)z^{-l}+\mathbf{x}[0]-\mathbf{x}[0]\right]=z\left(\hat{\mathbf{x}}(z)-\mathbf{x}[0]\right)
+\end{aligned}
+\end{equation*}
+
+\noindent Aplicando a transformada Z em~\ref{eq:ssed} e rearranjando, temos
+
+\begin{equation*}
+\begin{aligned}
+\hat{\mathbf{x}}(z)=&~(z\mathbf{I}-\mathbf{A})^{-1}z\mathbf{x}[0]+(z\mathbf{I}-\mathbf{A})^{-1}\mathbf{B}\hat{\mathbf{u}}(z) \\
+\hat{\mathbf{y}}(z)=&~\mathbf{C}(z\mathbf{I}-\mathbf{A})^{-1}z\mathbf{x}[0]+\mathbf{C}(z\mathbf{I}-\mathbf{A})^{-1}\mathbf{B}\hat{\mathbf{u}}(z)+\mathbf{D}\hat{\mathbf{u}}(z)
+\end{aligned}
+\end{equation*}
+
+\subsection{Estabilidade de Sistemas Leneares Invariantes no Tempo}\label{subsec:ltis}
+
+Os sistemas são projetados para executar algumas tarefas ou para processar sinais. Se um sistema não é estável, o sistema pode  ocasionar até mesmo desastres (queimar, desintegrar ou saturar quando um sinal, não importa quão pequeno seja, for aplicado). Portanto, um sistema instável é inútil na prática e a estabilidade é um requisito básico para todos os sistemas. Além da estabilidade, os sistemas devem atender a outros requisitos, como rastrear os sinais desejados e suprimir o ruído, para serem realmente úteis na prática. A resposta de sistemas lineares sempre pode ser decomposta como a resposta de estado zero e a resposta de entrada zero. É comum na literatura mostrar a estabilidade destas duas respostas separadamente. Nesta seção, faremos uma breve introdução de estabilidade BIBO (bounded-input bounded-output) para a resposta do estado zero e estabilidades marginais e assintóticas para a resposta da entrada zero, para o caso de sistemas em tempo discreto.
+
+Dado o sistema em tempo discreto single-input single-output (SISO),
+
+\begin{equation}\label{eq:bibo}
+\mathbf{y}[k]=\sum_{m=0}^{k} g[k-m]\mathbf{m}[m]= \sum_{m=0}^{k} g[m]\mathbf{u}[k-m],
+\end{equation}
+
+\noindent onde $g[k]$ é a sequência de resposta ao impulso ou a seqüência de saída excitada por uma sequência de impulso aplicada em $k = 0$. Para ser descrito por (\ref{eq:bibo}), o sistema de tempo discreto deve ser linear, invariante no tempo, e causal. Além disso, o sistema deve ser inicialmente relaxado em $k = 0$.
+
+Diz-se que uma sequência de entrada $\mathbf{u}[k]$ é limitada se $\mathbf{u}[k]$ não crescer até infinito positivo ou negativo ou se existir uma constante $\mathbf{u}[m]$ tal que $|\mathbf{u}[k]|\leq \mathbf{u}[m] < \infty$, para $k=0,1,2,\dots$.
+
+Diz-se que um sistema é BIBO estável se toda sequência de entrada limitada excita uma sequência de saída limitada. Essa estabilidade é definida para a resposta do estado zero e é aplicável somente se o sistema estiver inicialmente relaxado.
+
+O sistema em tempo discreto mostrado em (\ref{eq:dtsx}) é dito ser marginalmente estável ou estável no sentido de Lyapunov se todo estado inicial finito $\mathbf{x}_o$ excita uma resposta limitada. É assintoticamente estável se todo estado inicial finito excita uma resposta limitada, que, além disso, se aproxima de $0$ como $k \rightarrow \infty$.
+
+Outra forma bastante comum de verificar a estabilidade de m sistema de tempo discreto é através da avaliação dos seus autovalores, ou seja, caso a magnitude dos autovalores da matrix de estado $\mathbf{A}$ for menor que $1$, o sistema [e dito estável. Se analisarmos o sistema resultante no domínio da frequência, os autovalores em malha fechada correspondem aos pólos da função de transferência em malha fechada.
+
+
 \subsection{Processo de Discretização}\label{subsec:pd}
+
+Segundo Smith \textit{et al.}~\cite{smith1997scientist}, a maioria dos sinais encontrados diretamente na ciência e na engenharia é contínuo: intensidade da luz que muda com a distância; tensão que varia ao longo do tempo; uma taxa de reação química que depende da temperatura, etc. A Conversão Analógico-Digital (CAD) e a Conversão Digital-para-Analógica (CDA) são os processos que permitem que os computadores digitais interajam com esses sinais cotidianos. A informação digital é diferente de sua contraparte contínua em dois aspectos importantes: é amostrada e quantizada. Ambos restringem a quantidade de informação que um sinal digital pode conter.
+
+Considerando o sistema descrito na Equação~\ref{eq:ssec}, se o conjunto de equações é para ser computado em um computador digital, ele deve ser discretizado. Dado que $\dot{\mathbf{x}}(t)=\lim_{T_\mathrm{s}\to 0} \frac{\mathbf{x}(t+T_\mathrm{s})-\mathbf{x}(t)}{T_\mathrm{s}}$, pode-se aproximar Equação~\ref{eq:ssec}, usando $t=kT_\mathrm{s}$, para $k=0,1,\dots$, de
+
+\begin{equation*}
+\begin{cases}
+\dot{\mathbf{x}}((k+1)T_\mathrm{s})=(\mathbf{I}+T_\mathrm{s}\mathbf{A})\mathbf{x}(kT_\mathrm{s})+T_\mathrm{s}\mathbf{B}\mathbf{u}(kT_\mathrm{s})\\
+\mathbf{y}(kT_\mathrm{s})=\mathbf{C}\mathbf{x}(kT_\mathrm{s})+\mathbf{D}\mathbf{u}(kT_\mathrm{s})
+\end{cases}
+\end{equation*}
+
+\noindent Esta é uma equação de espaço de estados em tempo discreto e pode ser facilmente computada em um computador digital. Esta discretização é a mais fácil de realizar, mas produz os resultados menos precisos para o mesmo $T_\mathrm{s}$. Discutimos a seguir uma discretização diferente.
+
+Se uma entrada $\mathbf{u}(t)$ é gerada por um computador digital seguido por um conversor de digital para analógico, então $\mathbf{u}(t)$ será constante por partes. Essa situação geralmente surge no controle por computador dos sistemas de controle. Seja
+
+\begin{equation}
+\mathbf{u}(t) = \mathbf{u}(kT_\mathrm{s}) =: \mathbf{u}[k],~ para~ kT_\mathrm{s} \leq t < (k + 1)T_\mathrm{s}
+\end{equation}
+
+\noindent De acordo com Chen, podemos computar $\mathbf{x}[k+1]$, como
+
+\begin{equation*}
+\mathbf{x}[k+1]=e^{\mathbf{A}T_\mathrm{s}}\mathbf{x}[k]+\left( \int_{0}^{T_\mathrm{s}} e^{\mathbf{A}\alpha}d\alpha \right)\mathbf{B}\mathbf{u}[k]
+\end{equation*}
+
+Assim, se uma entrada altera o valor apenas em instantes de tempo discreto $kT$ e se computarmos apenas as respostas em $t = kT$, então (\ref{eq:ssec}) se tornam
+
+\begin{equation}\label{eq:ssednova}
+\begin{cases}
+\mathbf{x}(k+1)=\mathbf{A}_d\mathbf{x}(k)+\mathbf{B}_d\mathbf{u}(k)\\
+\mathbf{y}(k)=\mathbf{C}_d\mathbf{x}(k)+\mathbf{D}_d\mathbf{u}(k)\\
+\end{cases},
+\end{equation}
+
+\noindent onde $\mathbf{A}_d=$, $\mathbf{B}_d=\int_{0}^{T_\mathrm{s}} e^{\mathbf{A}\tau}d\tau\mathbf{B}$, $\mathbf{C}_d=\mathbf{C}$ e $\mathbf{D}_d=\mathbf{D}$
+
+
+Segundo Chen, a matriz $\mathbf{B}_d$ pode ser obtida por $\mathbf{B}_d=\mathbf{A}^{-1}(\mathbf{A}_d-\mathbf{I})\mathbf{B}$ (caso $\mathbf{A}$ não seja singular).
+
+A solução das equações de estado para sistemas em tempo discreto pode ser obtida por
+
+\begin{equation}\label{eq:solxd}
+\mathbf{x}[k]=\mathbf{A}^k\mathbf{x}[0]+\sum_{m=0}^{k-1}(\mathbf{A}^{k-m-1}\mathbf{B}\mathbf{u}[m])
+\end{equation}
+
+\begin{equation}\label{eq:solyd}
+\mathbf{y}(k)=\mathbf{C}\mathbf{A}^k\mathbf{x}[0]+\sum_{m=0}^{k-1}(\mathbf{C}\mathbf{A}^{k-m-1}\mathbf{B}\mathbf{u}[m])+\mathbf{D}\mathbf{u}[k]
+\end{equation}
+
+ 
 
 \subsection{Análise Quantitativa da Resposta ao Degrau}\label{subsec:aqrd}
 
+Dado um sistema linear de entrada/saída (Eq.~\ref{eq:ssed}), a forma geral da solução da Equação~\ref{eq:ssed} é dada pela equação de convolução em (\ref{eq:solyd}). Vemos a partir da forma dessa equação que a solução consiste em uma resposta de condição inicial e uma resposta de entrada. A resposta de entrada, corresponde aos dois últimos termos da Equação \ref{eq:solyd}, consiste em dois componentes, a resposta transitória e a resposta em estado estacionário. A resposta transitória ocorre no primeiro período de tempo após a entrada ser aplicada e reflete a incompatibilidade entre a condição inicial e a solução de estado estacionário. A resposta de estado estacionário é a parte da resposta de saída que reflete o comportamento de longo prazo do sistema sob as entradas dadas. Para entradas que são periódicas, a resposta em estado estacionário será frequentemente periódica e, para entradas constantes, a resposta será frequentemente constante.
+
+Uma forma de entrada particularmente comum é o degrau unitário, que representa uma mudança abrupta na entrada de um valor para outro.  Um degrau unitário (às vezes chamada de função de degrau Heaviside) é definida como
+
+\begin{equation*}
+  \mathbf{u}[k]=\systeme{
+  0~  k<0,
+  1~  k\geq 0
+  }
+\end{equation*}
+
+Pode-se computar a resposta ao degrau de um sistema linear discreto através da Equação~\ref{eq:solyd}. Usando algumas operações algébricas, podemos chegar a conclusão de que a resposta em estado estacionário ao degrau unitário é dado por
+
+\begin{equation}\label{eq:yss}
+\begin{aligned}
+y_{\mathrm{ss}}=\mathbf{C}(\mathbf{I}-\mathbf{A})^{-1}\mathbf{B}+\mathbf{D}.
+\end{aligned}
+\end{equation}
+
+\noindent se $\mathbf{A}$ possui autovalores com valor módulo menor ou igual a $1$ (implicando que a origem é um ponto de equilíbrio estável na ausência de qualquer entrada).
+
+A Figura~\ref{fig:output} ilustra a resposta ao degrau de um sistema discreto. Vários termos são usados ao se referir a uma resposta ao degrau. O valor do estado estacionário $y_{\mathrm{ss}}$ de uma resposta ao degrau é o nível final da saída, supondo que converge. O sobressinal $M_\mathrm{p}$ é a porcentagem do valor final pelo qual o sinal inicialmente se eleva acima do valor final. Isso geralmente pressupõe que os valores futuros do sinal não excedem o valor final em mais do que esse transitório inicial, caso contrário, o termo pode ser ambíguo. O tempo de assentamento $k_{\mathrm{s}}$ é o tempo necessário para o sinal ficar dentro de uma faixa de valores compreendidos $p\%$ acima e abaixo do valor final (neste trabalho tratado como região de assentamento $\Pi$) para todos os tempos futuros. O tempo de assentamento também é por vezes definido como atingindo $1\%$ ou $5\%$ do valor final. Em geral, essas medidas de desempenho podem depender da amplitude do degrau de entrada, mas, para sistemas lineares, as duas últimas quantidades definidas acima são independentes do tamanho do degrau. Por último, para este trabalho, definidos também o que chamados de tempo de alcance $k_{\mathrm{r}}$ que é a amostra onde a resposta do sistema alcança pela primeira vez a região de assentamento.
+
+\begin{figure}[ht]
+	\centering
+	%\framebox{\parbox{4.6in}{
+			\centering
+			\includegraphics[trim={3.54cm 0cm 0cm 0cm}, clip, width=0.8\textwidth]{figures/output.eps}
+			%}
+	%}
+	\caption{Step response of a discrete-time system.}
+	\label{fig:output}
+\end{figure}
+
 \section{Técnicas de Projeto de Controle para Sistemas Discretos}\label{sec:tpcsd}
+
+Quando projetamos controladores para sistemas em tempo discreto, dispomos de muitas tecnicas para realizar o projeto. Muita das vezes, precisa-se fazer uma análise minunciosa da técnica a ser emprega, devido ao teor do projeto em questão. A seguir, mostraremos algumas das técnicas utilizadas atualmente e que mais tarde será feito uma comparação das mesmas com a técnica que abordamos neste trabalho.
 
 \subsection{Alocação de Polos}\label{subsec:ap}
 
+Dado que o sistema em questão seja descrito como em (\ref{eq:ssed}), assumindo que tenha apenas um sinal de entrada, e o polinômio característico da matrix $\mathbf{A}$ seja $P(z)=z^n+p_\mathrm{1}z^{\mathrm{n-1}}+\dots + p_n$. 
+Assumindo que o sistema em (\ref{eq:ssed}) é alcançável, pode-se transformá-lo na forma canônica, mudando as variáveis de estado pela transformação $z=T_\mathrm{s}\mathbf{x}$, e a equação de estado transformado é
+
+\begin{equation}\label{eq:ssed2}
+z(k+1)=\hat{\mathbf{A}}z(k)+\hat{\mathbf{B}}\mathbf{u}(k)
+\end{equation}
+
+Com o sistema sendo alcançável, existe uma realimentação linear que fornece um sistema em malha fechada com polinômio característico $P(z)$. A realimentação é dada por $\mathbf{u}[k]=-\mathrm{K}\mathbf{x}[k]$, com
+
+\begin{equation}\label{eq:ctrlD}
+\begin{aligned}
+\mathbf{K}=&~(p_\mathrm{1}-a_\mathrm{1}~p_\mathrm{2}-a_\mathrm{2}~\dots~p_n-a_n)\hat{\mathbf{W}}_c \mathbf{W}_c^{-1} \\
+          =&~(0~\dots~0~1)\mathbf{W}_c^{-1}P(\mathbf{A}) \\
+\end{aligned},
+\end{equation}
+
+\noindent onde $\hat{\mathbf{W}}_c$ e $\mathbf{W}_c$ são as matrizes de alcançabilidade de (\ref{eq:ssed2}) e (\ref{eq:ssed}), respectivamente.
+
+\begin{equation}\label{eq:reachM1}
+\hat{\mathbf{W}}^{-1}_c=\begin{bmatrix}
+1 & a_\mathrm{1} & \dots & a_{n-1} \\
+0 & 1 & \dots & a_{n-2} \\
+\vdots & \vdots & \ddots & \vdots \\
+0 & 0 & \dots & 1 
+\end{bmatrix}
+\end{equation}
+
+\begin{equation}\label{eq:reachM2}
+\mathbf{W}_c=(\mathbf{B}~\mathbf{A}\mathbf{B}\dots \mathbf{A}^{n-1}\mathbf{B})
+\end{equation}
+
+
+
+
 \subsection{Regulador Quadrático Linear}\label{subsec:rql}
+
+O regulador quadrático linear LQR da teoria de controle ótimo pode ser usado para resolver uma família de problemas de projeto do regulador em que o estado é acessível e a regulação e o esforço do atuador são medidos por um desvio médio-quadrado. Uma formulação estocástica do problema LQR é conveniente para nós; uma formulação mais usual é como um problema de controle ótimo. O sistema é descrito por
+
+\begin{equation*}
+\dot{\mathbf{x}}=\mathbf{A}\mathbf{x}+\mathbf{B}\mathbf{u}+\mathbf{w},
+\end{equation*}
+
+\noindent onde $w$ é um ruído branco de média zero, isto é, $w$ tem matriz de densidade espectral de potência $S_\mathrm{w} (w) = I$ para todos $w$. O estado $\mathbf{x}$ está disponível para o controlador, então $\mathbf{y} = \mathbf{x}$ nesse \textit{framework}.
+
+A função de custo do LQR é a soma do estado ponderado do quadrado médio do estado estacionário x, e o sinal do atuador ponderado do quadrado médio do estado estacionário u:
+
+\begin{equation}
+J_\mathrm{lqr} = \lim_{t\to \infty} \mathbf{E}(\mathbf{x}(t)^TQ\mathbf{x}(t)+\mathbf{u}(t)^TR\mathbf{u}(t)),
+\end{equation}
+
+\noindent onde Q e R são matrizes positivas de peso semidefinido; a
+O primeiro termo penaliza os desvios de x de zero, e o segundo termo representa o custo de usar o sinal do atuador. Podemos expressar esse custo em nossa estrutura, formando o sinal de saída regulado $ \begin{bmatrix}
+R^{\frac{1}{2}}u \\
+Q^{\frac{1}{2}}x 
+\end{bmatrix}  $, portanto, $J_\mathrm{lqr} = \lim_{t\to \infty} \mathbf{E}z(t)^Tz(t),$ o desvio quadrático médio de z. 
 
 \subsection{Síntese Indutiva Guidada por Contra Exemplos - CEGIS}\label{subsec:cegis}
 
