--- a/0_cover/cover.tex
+++ b/0_cover/cover.tex
@@ -1,6 +1,6 @@
 % -- Titulo e Descricao ------------------------------------------------------
 \newcommand{\tittese}{%
-	\textsf{\bfseries\Large Síntese de Controladores Digitais Guiada por Contra-exemplos com Avaliação de Requisitos de Performance Não-frágil Para Sistemas de Controle Discreto com Realimentação de Estados \\
+	\textsf{\bfseries\Large Síntese de Sistemas de Controle Discretos e Com Realimentação de Estados Baseada em Requisitos de Desempenho \\
 	\vspace{0.8ex}
         }}
 
