--- a/references/references.bib
+++ b/references/references.bib
@@ -812,12 +812,6 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   year={2010},
   publisher={Princeton university press}
 }
-@book{bakshi2010control,
-  title={Control System Engineering},
-  author={Bakshi, Uday A and Bakshi, Varsha U},
-  year={2008},
-  publisher={Technical Publications Pune}
-}
 @inproceedings{shizawa1991principle,
   title={Principle of superposition: A common computational framework for analysis of multiple motion},
   author={Shizawa, Masahiko and Mase, Kenji},
@@ -1084,4 +1078,101 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   author={Smith, Steven W and others},
   year={1997},
   publisher={California Technical Pub. San Diego}
+}
+@article{cheng2010mdd,
+  title={An MDD-based generalized arc consistency algorithm for positive and negative table constraints and some global constraints},
+  author={Cheng, Kenil CK and Yap, Roland HC},
+  journal={Constraints},
+  volume={15},
+  number={2},
+  pages={265--304},
+  year={2010},
+  publisher={Springer}
+}
+@article{dorofeeva2010fsm,
+  title={FSM-based conformance testing methods: A survey annotated with experimental evaluation},
+  author={Dorofeeva, Rita and El-Fakih, Khaled and Maag, Stephane and Cavalli, Ana R and Yevtushenko, Nina},
+  journal={Information and Software Technology},
+  volume={52},
+  number={12},
+  pages={1286--1297},
+  year={2010},
+  publisher={Elsevier}
+}
+@inproceedings{balarin1993iterative,
+  title={An iterative approach to language containment},
+  author={Balarin, Felice and Sangiovanni-Vincentelli, Alberto L},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={29--40},
+  year={1993},
+  organization={Springer}
+}
+@article{jhala2009software,
+  title={Software model checking},
+  author={Jhala, Ranjit and Majumdar, Rupak},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={41},
+  number={4},
+  pages={21},
+  year={2009},
+  publisher={ACM}
+}
+@article{del1999visual,
+  title={A visual formalism for computational tree logic},
+  author={Del Bimbo, Alberto and Vicario, Enrico},
+  journal={Journal of Visual Languages \& Computing},
+  volume={10},
+  number={2},
+  pages={165--187},
+  year={1999},
+  publisher={Elsevier}
+}
+@article{sistla1985complexity,
+  title={The complexity of propositional linear temporal logics},
+  author={Sistla, A Prasad and Clarke, Edmund M},
+  journal={Journal of the ACM (JACM)},
+  volume={32},
+  number={3},
+  pages={733--749},
+  year={1985},
+  publisher={ACM}
+}
+@inproceedings{hojati1993bdd,
+  title={BDD-based debugging of designs using language containment and fair CTL},
+  author={Hojati, Ramin and Brayton, Robert K and Kurshan, Robert P},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={41--58},
+  year={1993},
+  organization={Springer}
+}
+@article{villa1996vis,
+  title={VIS User Manual},
+  author={Villa, Tiziano and Swamy, Gitanjali and Shiple, Thomas and Aziz, Adnan and Brayton, Robert and Edwards, Stephen and Hachtel, Gary and Khatri, Sunil and Kukimoto, Yuji and Pardo, Abelardo and others},
+  journal={Electronics Research Laboratory, University of Colorado at Boulder},
+  year={1996}
+}
+@book{kailath1980linear,
+  title={Linear systems},
+  author={Kailath, Thomas},
+  volume={156},
+  year={1980},
+  publisher={Prentice-Hall Englewood Cliffs, NJ}
+}
+@book{bakshi2008control,
+  title={Control System Engineering},
+  author={Bakshi, U.A. and Bakshi, V.U.},
+  year={2008},
+  publisher={Technical Publications Pune}
+}
+@book{willsky1997signals,
+  title={Signals and systems},
+  author={Willsky, Alan S and Young, Ian T},
+  year={1997},
+  publisher={Prentice-Hall International}
+}
+@book{oppenheim1999discrete,
+  title={Discrete-time signal processing},
+  author={Oppenheim, Alan V},
+  year={1999},
+  publisher={Pearson Education India}
 }
