--- a/references/references.bib
+++ b/references/references.bib
@@ -691,16 +691,6 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   journal={arXiv preprint arXiv:1703.07704},
   year={2017}
 }
-@article{bessa2017formal,
-  title={Formal non-fragile stability verification of digital control systems with uncertainty},
-  author={Bessa, Iury and Ismail, Hussama and Palhares, Reinaldo and Cordeiro, Lucas and Chaves Filho, Joao Edgar},
-  journal={IEEE Trans. Comput.},
-  volume={66},
-  number={3},
-  pages={545--552},
-  year={2017},
-  publisher={IEEE}
-}
 @inproceedings{majumdar2012clse,
   title={{CLSE: Closed-loop symbolic execution}},
   author={Majumdar, Rupak and Saha, Indranil and Shashidhar, KC and Wang, Zilong},
@@ -1175,4 +1165,82 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   author={Oppenheim, Alan V},
   year={1999},
   publisher={Pearson Education India}
+}
+@book{bittanti2012riccati,
+  title={The Riccati Equation},
+  author={Bittanti, Sergio and Laub, Alan J and Willems, Jan C},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+@article{van1984symplectic,
+  title={A symplectic method for approximating all the eigenvalues of a Hamiltonian matrix},
+  author={Van Loan, Charles},
+  journal={Linear Algebra and its Applications},
+  volume={61},
+  pages={233--251},
+  year={1984},
+  publisher={Elsevier}
+}
+@book{zhou1996robust,
+  title={Robust and optimal control},
+  author={Zhou, Kemin and Doyle, John Comstock and Glover, Keith and others},
+  volume={40},
+  year={1996},
+  publisher={Prentice hall New Jersey}
+}
+@article{malesani1990novel,
+  title={A novel hysteresis control method for current-controlled voltage-source PWM inverters with constant modulation frequency},
+  author={Malesani, Luigi and Tenti, Paolo},
+  journal={IEEE Transactions on Industry Applications},
+  volume={26},
+  number={1},
+  pages={88--92},
+  year={1990},
+  publisher={IEEE}
+}
+@article{zhou2007robust,
+  title={Robust adaptive output control of uncertain nonlinear plants with unknown backlash nonlinearity},
+  author={Zhou, Jing and Zhang, Chengjin and Wen, Changyun},
+  journal={IEEE Transactions on automatic control},
+  volume={52},
+  number={3},
+  pages={503--509},
+  year={2007},
+  publisher={IEEE}
+}
+@book{cohen1995ada,
+  title={Ada as a second language},
+  author={Cohen, Norman H},
+  year={1995},
+  publisher={McGraw-Hill Higher Education}
+}
+@article{chang1994finite,
+  title={Finite word-length effects of pipelined recursive digital filters},
+  author={Chang, Kyung Hi and Bliss, William G},
+  journal={IEEE Transactions on Signal Processing},
+  volume={42},
+  number={8},
+  pages={1983--1995},
+  year={1994},
+  publisher={IEEE}
+}
+@article{hauser1996handling,
+  title={Handling floating-point exceptions in numeric programs},
+  author={Hauser, John R},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={18},
+  number={2},
+  pages={139--174},
+  year={1996},
+  publisher={ACM}
+}
+@article{bessa2017formal,
+  title={Formal non-fragile stability verification of digital control systems with uncertainty},
+  author={Bessa, Iury and Ismail, Hussama and Palhares, Reinaldo and Cordeiro, Lucas and Chaves Filho, Joao Edgar},
+  journal={IEEE Transactions on Computers},
+  volume={66},
+  number={3},
+  pages={545--552},
+  year={2017},
+  publisher={IEEE}
 }
